refactor code; add more tests
- refactored many classes to either be more readable or more efficient
- added new Util classes to deal with rescheduling and new commands being added
- made MainApplication class more readable
- now it's a lot easier to add new commands
- add more tests to GiveawayServiceTest to ensure corectness

- project can be called DONE